<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/btnDrawEraser"
	    android:showAsAction="always"
	    android:checkable="false"
	    android:title="@string/btnDrawEraser"
	    android:icon="@drawable/eraser"
	    />
<item android:id="@+id/btnDrawColor"
      android:showAsAction="always"
	  android:checkable="false"
      android:title="@string/btnDrawColor"
      android:icon="@drawable/pincel" 
       />
<item android:id="@+id/btnDrawClearScreen"
      android:showAsAction="always"
	  android:checkable="false"
      android:title="@string/btnDrawClearScreen" 
      android:icon="@drawable/clear"
       />
    
<item android:id="@+id/btnDrawSave"
      android:showAsAction="always"
	  android:checkable="false"
      android:title="@string/btnDrawSave"
      android:icon="@drawable/save"
       />

</menu>