<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<!-- custom -->
	<!--  Search
	<item android:id="@+id/menu_search" android:showAsAction="ifRoom"
		android:title="@string/action_label_search" android:actionViewClass="android.widget.SearchView" />
	 -->
	 
	<!-- icon -->
	<!-- Refresh
	<item android:id="@+id/menu_refresh" android:showAsAction="ifRoom"
		android:title="@string/action_label_refresh" android:icon="@drawable/ic_menu_refresh_holo_light" />
	-->
	  
	<!-- icon + text -->
	<!--  modelo icone + texto
	<item android:id="@+id/menu_both" android:showAsAction="ifRoom|withText"
		android:title="@string/action_label_both" android:icon="@drawable/ic_menu_star_holo_light" />
	 -->
	<!-- somente texto
	<item android:id="@+id/menu_text" android:showAsAction="ifRoom"
		android:title="@string/action_label_text" />
	 -->
	<!-- Logo
	<item android:id="@+id/menu_logo" 
	    android:showAsAction="ifRoom"
		android:checkable="true" 
		android:checked="false" 
		android:icon="@drawable/project_logo"
		android:title="@string/app_name" />
	-->

	<item android:id="@+id/btn_cancel"
	    android:showAsAction="ifRoom|withText"
	    android:checkable="false"
	    android:icon="@drawable/ic_menu_cancel_over"
	    android:title="@string/button_cancel"  />

	<item
		android:id="@+id/btn_previous"
		android:checkable="false"
		android:icon="@drawable/ic_menu_previous"
		android:showAsAction="collapseActionView"
		android:title="@string/button_previous"
		android:visible="false" />

	<item
		android:id="@+id/btn_next"
		android:checkable="false"
		android:icon="@drawable/ic_menu_next"
		android:showAsAction="never"
		android:title="@string/button_next"
		android:visible="false" />
	   
	   <!-- Social: convidar amigos via mail  
	<item android:id="@+id/btn_social"
	    android:showAsAction="collapseActionView"
	    android:checkable="false"
	    android:icon="@drawable/ic_menu_social_add"
	    android:title="@string/button_social"  />
	    -->
	   


</menu>